--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,18 @@
               [value]="gender">{{ gender }}
           </label>
         </div>
+        <div formArrayName="hobbies">
+          <h4>Add Hobbies</h4>
+          <button class="btn btn-default" type="button" (click)="onAddHobby()">Add Hobby</button>
+          <div 
+          class="form-group"
+          *ngFor="let hobbyControl of signupForm.get('hobbies').controls; let i =index ">
+            <input 
+              type="text" 
+              class="form-control"
+              [formControlName]="i">
+          </div>  
+        </div>
         <span 
               class="help-block"
               *ngIf="!signupForm.valid && signupForm.touched"
