--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,16 @@
               id="username"
               formControlName="username"
               class="form-control">
+              <!-- this span will deal with error messages using errors  -->
               <span 
                 class="help-block"
                 *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched"
-              >Please enter a valid username!</span>
+              >
+                <span *ngIf="signupForm.get('userData.username').errors['nameIsForbidden']"
+                  >This username is forbidden!</span>
+                <span *ngIf="signupForm.get('userData.username').errors['required']"
+                  >This field is required!</span>
+              </span>
           </div>
           <div class="form-group">
             <label for="email">email</label>
